--- a/audio-classifier-project.ipynb
+++ b/audio-classifier-project.ipynb
@@ -94,6 +94,7 @@
     "    #UltraSound8K\n",
     "    if load_urbansound:\n",
     "        print(\"loading Ultrasound8k\")\n",
+    "        # Data Source: https://urbansounddataset.weebly.com/urbansound8k.html\n",
     "        metadata = pd.read_csv(\".data/UrbanSound8K/metadata/UrbanSound8K.csv\")\n",
     "        for root, dirs, files in os.walk(\"./data/UrbanSound8K\"):\n",
     "            print(root, str(len(dirs)), str(len(files)), len(all_data))\n",
@@ -113,6 +114,7 @@
     "\n",
     "    if load_birds:\n",
     "        print(\"Loading birds\")\n",
+    "        # Data Source: http://dcase.community/challenge2018/task-bird-audio-detection\n",
     "        for root, dirs, files in os.walk(\"./data/warblrb10k_public_wav/train/hasbird\"):\n",
     "            print(root, str(len(dirs)), str(len(files)), len(all_data))\n",
     "            for file in files:\n",
@@ -126,6 +128,7 @@
     "    \n",
     "    if load_kaggle:\n",
     "        print(\"Loading Kaggle\")\n",
+    "        # Data Source: https://www.kaggle.com/mmoreaux/environmental-sound-classification-50#esc50.csv\n",
     "        metadata = pd.read_csv(\"./data/environmental-sound-classification-50/esc50.csv\")\n",
     "        #for root, dirs, files in os.walk(\"./data/environmental-sound-classification-50/\"):\n",
     "        for file in os.listdir(\"./data/environmental-sound-classification-50/audio\"):\n",
