adding data sources

--- a/audio-classifier-project.ipynb
+++ b/audio-classifier-project.ipynb
@@ -115,6 +115,7 @@
     "    if load_birds:\n",
     "        print(\"Loading birds\")\n",
     "        # Data Source: http://dcase.community/challenge2018/task-bird-audio-detection\n",
+    "        # Data Source: http://machine-listening.eecs.qmul.ac.uk/bird-audio-detection-challenge/#downloads\n",
     "        for root, dirs, files in os.walk(\"./data/warblrb10k_public_wav/train/hasbird\"):\n",
     "            print(root, str(len(dirs)), str(len(files)), len(all_data))\n",
     "            for file in files:\n",
