--- a/filter_audioset_data.ipynb
+++ b/filter_audioset_data.ipynb
@@ -1836,9 +1836,9 @@
    "outputs": [],
    "source": [
     "# Save filtered data frames\n",
-    "audioset_bal_train.to_csv('data/balanced_train_segments-animals.csv', header=True, index=False)\n",
-    "audioset_eval.to_csv('data/eval_segments-animals.csv', header=True, index=False)\n",
-    "audioset_labels.to_csv('data/class_labels_indices-animals.csv', header=True, index=False)"
+    "#audioset_bal_train.to_csv('data/balanced_train_segments-animals.csv', header=True, index=False)\n",
+    "#audioset_eval.to_csv('data/eval_segments-animals.csv', header=True, index=False)\n",
+    "#audioset_labels.to_csv('data/class_labels_indices-animals.csv', header=True, index=False)"
    ]
   },
   {
